# standard-release

./: .clang-format  .editorconfig  CMakeLists.txt  README.md
.github/: CODEOWNERS
cmake/: FindCommonMark.cmake  FindLibGit2.cmake  FindYamlCpp.cmake
docs/: Doxyfile  errors.md  index.md  using.md
src/: CMakeLists.txt  main.cpp
src/standard-release/: standard-release.cpp  standard-release.h
src/standard-release/changelog/: changelog.cpp  changelog.h  ichangelog.cpp  ichangelog.h
src/standard-release/commits/: conventional.cpp  conventional.h  iconventional.cpp  iconventional.h
src/standard-release/config/: iconfig.cpp  iconfig.h  yaml.cpp  yaml.h
src/standard-release/errors/: error.cpp  error.h  errors.cpp  errors.h  ierror.cpp  ierror.h
src/standard-release/git/: hooks.cpp  hooks.h  repository.cpp  repository.h
src/standard-release/log/: ilog.h
src/standard-release/semver/: semver.cpp  semver.h
src/standard-release/sources/: cmake.h  isource.cpp  isource.h  json.cpp  json.h  text.cpp  text.h
tests/: CMakeLists.txt  test_changelog.cpp  test_semver.cpp
tests/fixtures/: CHANGELOG-1.md  package.json
tests/fixtures/changelogs/: create-new.md
tests/fixtures/config/: release.yml
